--- a/css/grid.css
+++ b/css/grid.css
@@ -8,7 +8,7 @@ body {
 	visibility: hidden;
 }
 
-#main-content:after,.container:after,.row:after,#adverts:after {
+#main-content:after,.container:after,.row:after {
 	display: table;
 	line-height: 0;
 	content: "";
@@ -109,8 +109,6 @@ body {
 }
 
 @media ( max-width: 767px ) {
-}
-@media ( max-width: 767px ) {
 	.hidden {
 		display: none;
 	}
@@ -135,50 +133,3 @@ body {
 		width: 100%;
 	}	
 }
-
-/* Show Grid */
-#page-content.show-grid {
-	margin: 0 auto;
-	width: 80%;
-	border: 5px solid black;
-}
-
-.show-grid #header,.show-grid #footer {
-	text-align: center;
-	background: #eee;
-	line-height: 50px;
-}
-
-.show-grid .container {
-	background: #eee;
-	border: 1px solid #aaa;
-	text-align: center;
-	width:100%;
-	height: 100px;
-	border-radius: 8px 8px 8px 8px;
-}
-
-.show-grid #adverts .container {
-	height: 20px;
-}
-
-.show-grid .cell {
-	padding: 10px;
-	border-right: 1px solid #aaa;
-	border-bottom: 1px solid #aaa;
-	background-color: #ddd;
-	border-radius: 8px 8px 8px 8px;
-	text-align: center;
-}
-
-.show-grid .cell:first-child {
-	border-left: none;
-}
-
-.show-grid #header,.show-grid #adverts {
-	border-bottom: 5px solid #444;
-}
-.show-grid #footer {
-	border-top: 5px solid #444;
-}
-
